[package]
name = "malunpacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icaparse = "0.2.0"
tokio = { version = "1.37.0", features = ["fs", "io-util", "rt-multi-thread", "macros", "time", "sync", "net"] }
yara = "0.26.0"
infer = "0.15.0"
sevenz-rust = "0.6.0"
tempfile = "3.10.1"
# magic = "0.16.2"
