[package]
name = "malunpacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icaparse = "0.2.0"
tokio = { version = "1.37.0", features = ["fs", "io-util", "rt-multi-thread", "macros", "time", "sync", "net"] }
yara = "0.26.0"
sevenz-rust = { version = "0.6.0", features = ["aes256", "zstd", "bzip2"]}
tempfile = "3.10.1"
simple_logger = "4.3.3"
log = "0.4.21"
tracing = "0.1.40"
thiserror = "1.0.58"
tracing-subscriber = "0.3.18"
zip = "0.6.6"
magic = "0.16.2"
mail-parser = "0.9.3"
libcdio-sys = { version = "0.5.0", features = ["cdio", "iso9660"]}
toml = "0.8.12"
serde = { version = "1.0.198", features = ["derive"]}
rust-bert = { version = "0.22.0" }
anyhow = "1.0.82"
